# Platform

./: 111.pptx  CMakeLists.txt  demo  demo.txt
include/cJSON/: cJSON.h
include/hlog/: OSHeader.h  hlog.h  hlog1.h  hlogconfig.h  log.h
include/hpr/: HPR_Addr.h  HPR_AlignMem.h  HPR_AsyncIOEX.h  HPR_Cond.h  HPR_Config.h  HPR_CycleBuffer.h  HPR_DllSo.h  HPR_Error.h  HPR_Event.h  HPR_FdPool.h  HPR_FdPoolAPI.h  HPR_FileSystem.h  HPR_Guard.h  HPR_Hpr.h  HPR_IOCompletionQ.h  HPR_Inttypes.h  HPR_MsgQ.h  HPR_Mutex.h  HPR_Netdb.h  HPR_RingQueue.h  HPR_Select.h  HPR_Semaphore.h  HPR_SimpleHash.h  HPR_SimpleIntHash.h  HPR_Socket.h  HPR_String.h  HPR_Thread.h  HPR_ThreadPool.h  HPR_ThreadPoolFlex.h  HPR_Time.h  HPR_Timer.h  HPR_Types.h  HPR_Utils.h  TimedWait.h  inter_include.h
include/libsafefunc/: hprsafefunc.h  hprsecurec.h  hprsecurectype.h  securecDC.h
lib/: libcurl.so.4  log4cxx.properties
libs/x86/curl/: libnghttp2.so.14.20.1
src/: HPCServer.txt  HPCServer_SetAlgori.cpp  HPCServer_SetAlgori.txt  HPCServer_Task.txt  authCMS.txt  authCMS_Capacity.txt  authCMS_Node.cpp  base_define.h  cJSON.txt  demo.txt  param.h  sha256.txt  util_hpr_include.h  util_urlopt.cpp  util_urlopt.h
